Changed interaction with test tubes

--- a/blended/Assembly-CSharp.csproj
+++ b/blended/Assembly-CSharp.csproj
@@ -46,7 +46,7 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Scripts\Terminal.cs" />
-     <Compile Include="Assets\Scripts\dummy.cs" />
+     <Compile Include="Assets\Scripts\TestTube.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
