--- a/blended/blended.CSharp.csproj
+++ b/blended/blended.CSharp.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Assets\Scripts\curtainOpen.cs" />
     <Compile Include="Assets\Scripts\typewriter.cs" />
     <Compile Include="Assets\closeTerminal.cs" />
+    <Compile Include="Assets\video.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2015\UnityVS.CSharp.targets" />
 </Project>
